page width -- fixed loading and register page cause they had a set wifth and were causeing the window to be larger than max width (cause of scroll bar) causing a horizontal scroll

--- a/login/login.css
+++ b/login/login.css
@@ -3,8 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 92vh;
-    width: 91vw;
+    height: 93vh;
     background-color: black;
 }
 
